--- a/online-zoo/pages/main/sass/layouts/_promo.scss
+++ b/online-zoo/pages/main/sass/layouts/_promo.scss
@@ -32,7 +32,7 @@
     padding: 12px 200px 0 0;
 
     @include media-small_desktop {
-        padding: 0 147px 47px 0;
+        padding: 0px 147px 47px 0;
     }
 
     @include media-tablet {
@@ -69,6 +69,7 @@
         width: 237px;
         margin-bottom: 0;
         bottom: 10;
+        margin-top: 40px;
 
         h1 {
             font-size: 5.43rem;
