--- a/online-zoo/pages/main/sass/layouts/_pick-friend.scss
+++ b/online-zoo/pages/main/sass/layouts/_pick-friend.scss
@@ -76,7 +76,7 @@
         margin: 0 0 10px 0;
         width: 100%;
         &:last-child {
-            width: 863px;
+            max-width: 863px;
 
             @include media-tablet {
                 width: 100%;
@@ -117,7 +117,7 @@
 }
 
 .scheme-element {
-    width: 168px;
+    max-width: 168px;
     @include media-tablet {
         margin-right: 20px;
      }
