--- a/online-zoo/pages/main/sass/layouts/_testimonials.scss
+++ b/online-zoo/pages/main/sass/layouts/_testimonials.scss
@@ -116,7 +116,7 @@
 }
 
 .testimonials__scroll {
-    width: 600px;
+    width: 50%;
     height: 7px;
     margin: 20px auto 40px;
     color: $color-scroll;
