--- a/online-zoo/pages/main/sass/layouts/_backstage.scss
+++ b/online-zoo/pages/main/sass/layouts/_backstage.scss
@@ -52,7 +52,7 @@
 .backstage__content {
     display: flex;
     flex-direction: column;
-    width: 465px;
+    max-width: 465px;
     padding: 0;
     margin: 0;
     color: $color-text;
