--- a/online-zoo/pages/main/sass/style1.css
+++ b/online-zoo/pages/main/sass/style1.css
@@ -345,7 +345,7 @@ body {
 }
 
 h1 {
-  width: 500px;
+  max-width: 500px;
   font-style: normal;
   font-weight: 700;
   font-size: 10.6496rem;
@@ -689,7 +689,7 @@ a {
 }
 
 .promo__content {
-  width: 465px;
+  max-width: 465px;
   background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
   border-radius: 50%;
   color: #FFFFFF;
@@ -697,7 +697,7 @@ a {
 }
 @media (max-width: 1000px) {
   .promo__content {
-    width: 367px;
+    max-width: 367px;
     position: relative;
     bottom: 10px;
     margin-bottom: 37px;
@@ -710,7 +710,7 @@ a {
 }
 @media (max-width: 640px) {
   .promo__content {
-    width: 237px;
+    max-width: 237px;
     margin-bottom: 0;
     bottom: 10;
     margin-top: 40px;
@@ -718,18 +718,18 @@ a {
   .promo__content h1 {
     font-size: 5.43rem;
     margin: 37.8px 0 0 37.8px;
-    width: 255.6px;
+    max-width: 255.6px;
   }
 }
 @media (max-width: 640px) and (max-width: 320px) {
   .promo__content {
-    width: 119px;
+    max-width: 119px;
     margin-right: 28px;
   }
   .promo__content h1 {
     font-size: 2.8rem;
     margin: 19px 0 0 19px;
-    width: 128.2px;
+    max-width: 128.2px;
   }
 }
 
@@ -797,7 +797,7 @@ a {
 .backstage__content {
   display: flex;
   flex-direction: column;
-  width: 465px;
+  max-width: 465px;
   padding: 0;
   margin: 0;
   color: #333B41;
@@ -914,12 +914,12 @@ a {
 
 @media (max-width: 1000px) {
   .pet {
-    width: 294px;
+    max-width: 294px;
   }
 }
 @media (max-width: 640px) {
   .pet {
-    width: 284px;
+    max-width: 284px;
   }
 }
 @media (max-width: 320px) {
@@ -1187,7 +1187,7 @@ p {
   width: 100%;
 }
 .pick-friend__description h5:last-child {
-  width: 863px;
+  max-width: 863px;
 }
 @media (max-width: 640px) {
   .pick-friend__description h5:last-child {
@@ -1230,7 +1230,7 @@ p {
 }
 
 .scheme-element {
-  width: 168px;
+  max-width: 168px;
 }
 @media (max-width: 640px) {
   .scheme-element {
@@ -1443,7 +1443,7 @@ p {
 }
 
 .testimonials__scroll {
-  width: 600px;
+  width: 50%;
   height: 7px;
   margin: 20px auto 40px;
   color: #E5E5E5;
@@ -1618,7 +1618,7 @@ input[type=range]::-webkit-slider-runnable-track {
 .network-list a {
   display: flex;
   flex-direction: row;
-  width: 111px;
+  max-width: 111px;
   align-items: center;
 }
 @media (max-width: 640px) {
@@ -1684,7 +1684,7 @@ input[type=range]::-webkit-slider-runnable-track {
   justify-content: flex-end;
   align-items: flex-end;
   margin: 0;
-  width: 300px;
+  max-width: 300px;
   justify-content: space-between;
 }
 
