--- a/online-zoo/pages/main/sass/layouts/_footer.scss
+++ b/online-zoo/pages/main/sass/layouts/_footer.scss
@@ -2,6 +2,7 @@
     background: $color-dark;
     color: $color-light;
     padding: 41px 0 50px;
+    overflow: hidden;
     @include media-tablet {
         padding: 12px 0;
     }
