--- a/online-zoo/pages/main/sass/layouts/_pick-friend.scss
+++ b/online-zoo/pages/main/sass/layouts/_pick-friend.scss
@@ -4,6 +4,7 @@
     padding: 69px 0 100px;
     max-width: $max-width;
     margin: auto;
+    overflow: hidden;
     @include media-small_desktop {
         padding: 30px 30px 50px; 
     }
